--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<h1>About Me</h1>
 					<p>
 						I'm Ahmed Al Sunbati, but you can call me Moussa. I'm a mathematician, researcher, developer, philosopher, and writer. I'm currently enrolled in an Honors
-						curriculum with a STEM emphasis at STEM High School for Boys – 6th of October. I'm fond of music, nature, and arts.  
+						curriculum with a <a href="https://drive.google.com/file/d/1VCZcjHfy0dnm9_3UsCJCo25MyDYTYd0N/view?usp=sharing"> STEM </a> emphasis at STEM High School for Boys – 6th of October. I'm fond of music, nature, and arts.  
 					</p>
 					<button class="cart-btn"><a href="https://drive.google.com/file/d/1VCZcjHfy0dnm9_3UsCJCo25MyDYTYd0N/view?usp=sharing"> Resume </a></button>
 					
