--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 										<li><a href="descartes-second.html">Descartes' Second Meditation</a></li>
 									</ul>
 								</li>
+								<li><a href="#my_projects"></a></li>
 								<li>
 									<div class="header-icons">
 									
@@ -132,7 +133,7 @@
 
 	<!-- product section -->
 	<div class="product-section mt-150 mb-150">
-		<div class="container">
+		<div class="container" id="my_projects">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
