--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<li><a href="descartes-second.html">Descartes' Second Meditation</a></li>
 									</ul>
 								</li>
-								<li><a href="#my_projects"></a></li>
+								<li><a href="#my_projects">My Projects</a></li>
 								<li>
 									<div class="header-icons">
 									
