--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-1.jpg" alt=""></a>
+							<a href=#><img src="assets/img/products/post-1.jpg" alt="" height="220px"></a>
 						</div>
 						<h3>Variable Stars Visualizer</h3>
 						<div class="content">
@@ -157,7 +157,7 @@
 
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-2.png" alt=""></a>
+							<a href=#><img src="assets/img/products/post-2.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">Neural Style Transfer Project, Van Gogh</h3>
 						<p align="justify" style="padding:0 1em 0 1em">An art/deep learning project for generating starry-night-style pictures of <b>STEM High School For Boys</b>. The technique
@@ -167,7 +167,7 @@
 					</div>
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-3.png" alt=""></a>
+							<a href=#><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">Elliptic Curves, A Comprehensive Library</h3>
 						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves(Adding points, mulitply by a scalar, finding order of a point, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
@@ -177,7 +177,7 @@
 
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-4.png" alt=""></a>
+							<a href=#><img src="assets/img/products/post-4.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">VPython Simulations</h3>
 						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for 8 different physical systems: Electric field lines for different charge distributions (Charged Rod, Charged Sheet,..etc); a simulation for space contraction as a result of moving at very high speeds; a simulation for a solar system consisting of two planets of crossing orbits and a star.</p>
