--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 						out to explore the viability of ECC in a post-quantum cryptography</div>
                     <!--Countdown Timer-->
                     
-                	<button class="button-35"> Read </button>
+                	<a href="www.ys-journal.com/issues/issue_8.html#section-12"><button class="button-35"> Read </button></a>
                 </div>
             </div>
         </div>
@@ -251,7 +251,7 @@
 							out to explore the viability of ECC in a post-quantum cryptography</div>
 						<!--Countdown Timer-->
 						
-						<button class="button-35"> Read</button>
+						<a href="https://drive.google.com/file/d/1pFD3a3hP2v7Xdc5BMwqxTj80sqLOg9tQ/view?usp=sharing"><button class="button-35"> Read</button></a>
 					</div>
 				</div>
 			</div>
