--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 						out to explore the viability of ECC in a post-quantum cryptography</div>
                     <!--Countdown Timer-->
                     
-                	<a href="www.ys-journal.com/issues/issue_8.html#section-12"><button class="button-35"> Read </button></a>
+                	<a href="https://drive.google.com/file/d/1BELX3Ohg3d1ajbjQrIHWzCWriY1O7LbD/view?usp=sharing"><button class="button-35"> Read </button></a>
                 </div>
             </div>
         </div>
