--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
 	<!-- cart banner section -->
 	<section class="cart-banner pt-100 pb-100">
     	<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 text-center">
+					<div class="section-title">	
+						<h3><span class="orange-text">Publications</span> <span class="white-text">&</span> Books</h3>
+					</div>
+				</div>
+			</div>
         	<div class="row clearfix">
             	<!--Image Column-->
 
@@ -208,14 +215,14 @@
                 <div class="content-column col-lg-6">
 					<h3><span class="orange-text">Publications</span></h3>
                     <h4>An Analysis of Elliptic Curves Cryptography and its Prospects in a Post-Quantum Future</h4>
-                    <div class="text">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
+                    <div class="text"><p align="justify">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
 						of the problem of factoring large integers. In this study, we investigate another kind of cryptosystems based
 						on elliptic curves. This paper aims to understand the group structure of points on an elliptic curves.
 						Cryptosystems based on elliptic curves depend on the hardness of the elliptic curve version of the Discrete
 						Logarithm Problem. The efficiency and security of EC-based cryptosystems is compared with that of RSA.
 						It has been found that ECC provides equivalent level of security with much smaller key sizes and total
 						encryption and decryption time. Furthermore, an investigation of Isogeny-based Cryptography is carried
-						out to explore the viability of ECC in a post-quantum cryptography</div>
+						out to explore the viability of ECC in a post-quantum cryptography</p></div>
                     <!--Countdown Timer-->
                     
                 	<a href="https://drive.google.com/file/d/1BELX3Ohg3d1ajbjQrIHWzCWriY1O7LbD/view?usp=sharing"><button class="button-35"> Read </button></a>
@@ -241,12 +248,12 @@
 					<div class="content-column col-lg-6">
 						<h3><span class="orange-text">Thermodynamics</span> Handbook</h3>
 						<h4>Physics Club</h4>
-						<div class="text">This handbook was prepared as a part of the thermodynamics course at the official STEM October Physics
+						<div class="text"><p align="justify">This handbook was prepared as a part of the thermodynamics course at the official STEM October Physics
 							Club. It's aimed at an intensive introductory course of thermodynamics and statistcal mechanics to prepare high school 
 							students for international competitions such as <b><i> Physics Brawl </b></i> and <b><i> IPhO </b></i>. The handbook touches
 							topics on the basics of temperature, heat transfer, and calorimetry. It further explores the thermal molecular properties of 
 							matter (The relation between the kinetic energy of the molecules of a gas and its temperature). Furthermore, we investigate 
-							the applications of the laws of thermodynamics to engines and refrigrators.</div>
+							the applications of the laws of thermodynamics to engines and refrigrators.</p></div>
 						<!--Countdown Timer-->
 						
 						<a href="https://drive.google.com/file/d/1pFD3a3hP2v7Xdc5BMwqxTj80sqLOg9tQ/view?usp=sharing"><button class="button-35"> Read</button></a>
