--- a/descartes-first.html
+++ b/descartes-first.html
@@ -162,9 +162,9 @@
 						<div class="recent-posts">
 							<h4>Recent Posts</h4>
 							<ul>
-								<li><a href="death-socrates.html">Death of Socrates</a></li>
-								<li><a href="descartes-first.html">Descartes' First Meditation</a></li>
-								<li><a href="descartes-second.html">Descartes' Second Meditation</a></li>
+								<li><a href="death-socrates.html"><i class="fa-solid fa-angle-right">Death of Socrates</i></a></li>
+								<li><a href="descartes-first.html"><i class="fa-solid fa-angle-right">Descartes' First Meditation</i></a></li>
+								<li><a href="descartes-second.html"><i class="fa-solid fa-angle-right">Descartes' Second Meditation</i></a></li>
 							</ul>
 						</div>
 				
