--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
 						<a href="death-socrates.html"><div class="latest-news-bg news-bg-1">
-							<img src="assets/img/Death_of_Socrates.jpg" alt="">
+							<img src="assets/img/Death_of_Socrates.jpg" alt="" height="100%", width="100%">
 						</div></a>
 						<div class="news-text-box">
 							<h3><a href="death-socrates.html">Death Of Socrates</a></h3>
-							<p class="excerpt">Socrates, The father of western philosophy, surprisingly, never wrote a line in his life! All what we know about him is from the writings of his student Plato who also went on to become a great philosopher. </p>
+							<p class="excerpt" align="justify">Socrates, The father of western philosophy, surprisingly, never wrote a line in his life! All what we know about him is from the writings of his student Plato who also went on to become a great philosopher. </p>
 							<a href="death-socrates.html"><button class="read-more"> Read More </button></a>
 						</div>
 					</div>
@@ -294,11 +294,11 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
 						<a href="descartes-first.html"><div class="latest-news-bg news-bg-2">
-							<img src="assets/img/descartes_first_meditation.jpg" alt="">
+							<img src="assets/img/descartes_first_meditation.jpg" alt="" height="100%", width="100%">
 						</div></a>
 						<div class="news-text-box">
 							<h3><a href="descartes-first.html">Descrates' First Meditation</a></h3>
-							<p class="excerpt">What is the truth? Is it the set of beliefs we are endowed with when we were born? How many times did we find that something we used to believe as children turned out to be some kind work of a devil trying to decieve us?</p>
+							<p class="excerpt" align="justify">What is the truth? Is it the set of beliefs we are endowed with when we were born? How many times did we find that something we used to believe as children turned out to be some kind work of a devil trying to decieve us?</p>
 							<a href="descartes-first.html"><button class="read-more"> Read More </button> </a>
 						</div>
 					</div>
@@ -306,11 +306,11 @@
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
 					<div class="single-latest-news">
 						<a href="descartes-second.html"><div class="latest-news-bg news-bg-3">
-							<img src="assets/img/descartes_second_meditation.jpg" alt="">
+							<img src="assets/img/descartes_second_meditation.jpg" alt="" height="100%", width="100%">
 						</div></a>
 						<div class="news-text-box">
 							<h3><a href="descartes-second.html">Descrates' Second Meditation</a></h3>
-							<p class="excerpt">So, in the last meditation we reached a dead-end. Descartes decided that everything that was taken for granted to be true is not any less false than the myth of Santa Claus. The corporal nature of the world was no longer evident and clear as it once seemed to be.</p>
+							<p class="excerpt" align="justify">So, in the last meditation we reached a dead-end. Descartes decided that everything that was taken for granted to be true is not any less false than the myth of Santa Claus. The corporal nature of the world was no longer evident and clear as it once seemed to be.</p>
 							<a href="descartes-second.html"> <button class="read-more"> Read More </button> </a>
 						</div>
 					</div>
