--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 	<!-- end features list section -->
 
 	<!-- product section -->
+	<section class="projects">
 	<div class="product-section mt-150 mb-150">
 		<div class="container" id="my_projects">
 			<div class="row">
@@ -189,6 +190,7 @@
 
 		</div>
 	</div>
+</section>
 	
 	<!-- end product section -->
 
