--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
 						</div>
 						<h3 class="project-title">Neural Style Transfer Project, Van Gogh</h3>
 						<p align="justify" style="padding:0 1em 0 1em">An art/deep learning project for generating starry-night-style pictures of <b>STEM High School For Boys</b>. The technique
-							depends on copying the style of a base image and composing the image desired in that style. The algorithm depends on optimizing the output image to match the content statistics of the content image and
-							the style statistics of the style reference image. </p>
+							depends on copying the style of a base image and composing the image desired in that style. </p>
 						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="button-35"> Explore </button></a>
 					</div>
 					<div class="single-product-item">
@@ -171,7 +170,7 @@
 							<a href=#><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">Elliptic Curves, A Comprehensive Library</h3>
-						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves(Adding points, mulitply by a scalar, finding order of a point, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
+						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves(adding points, scalar multiples, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
 						<a href="https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library"><button class="button-35"> Explore </button></a>
 					</div>
 
@@ -181,7 +180,7 @@
 							<a href=#><img src="assets/img/products/post-4.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">VPython Simulations</h3>
-						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for 8 different physical systems: Electric field lines for different charge distributions (Charged Rod, Charged Sheet,..etc); a simulation for space contraction as a result of moving at very high speeds; a simulation for a solar system consisting of two planets of crossing orbits and a star.</p>
+						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for physical systems: Electric field lines for different charge distributions; a simulation for space contraction as a result of very high speeds; a simulation for a solar system of two planets of crossing orbits and a star.</p>
 						<a href="https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course"><button class="button-35"> Explore </button></a>
 					</div>
 				
@@ -193,7 +192,6 @@
 </section>
 	
 	<!-- end product section -->
-
 	<!-- cart banner section -->
 	<section class="cart-banner pt-100 pb-100">
     	<div class="container">
