--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                 <!--Content Column-->
                 <div class="content-column col-lg-6">
 					<h3><span class="orange-text">Publications</span></h3>
-                    <h4>An Analysis of Elliptic Curves Cryptography and its Prospects in a Post-Quantum Future</h4>
+                    <h4>An Analysis of Elliptic Curves Cryptography and its Prospects in a Post-Quantum Future (Pioneer Academics Research)</h4>
+					<h6><i>Under Supervision of professor Nuh Aydin of Kenoyn college</i></h6>
                     <div class="text"><p align="justify">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
 						of the problem of factoring large integers. In this study, we investigate another kind of cryptosystems based
 						on elliptic curves. This paper aims to understand the group structure of points on an elliptic curves.
