--- a/descartes-first.html
+++ b/descartes-first.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="What is the truth? Is it the set of beliefs we are endowed with once we are kicked into this world? But that isn't the case, right? How many times did we find that something we used to believe as children turned out to be some kind work of a devil trying to decieve us?">
 
 	<!-- title -->
 	<title>Descartes' First Meditation</title>
