--- a/descartes-second.html
+++ b/descartes-second.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="description" content="So, in the last meditation we reached a dead-end. Descartes decided that everything that was taken for granted to be true is not any less false than the myth of Santa Claus. The corporal nature of the world was no longer evident and clear as it once seemed to be. Maybe there's some kind of god or devil making it about that there's no heavens, no earth, no fire, no light, no hands, no eyes, no world and yet he also managed to bring it about that we experience these things.">
 
 	<!-- title -->
 	<title>Descartes' Second Mediation</title>
