--- a/index.html
+++ b/index.html
@@ -262,6 +262,38 @@
 			</div>
 		</section>
 		<!-- end cart banner section -->
+
+				<!-- cart banner section -->
+				<section class="cart-banner pt-100 pb-100">
+					<div class="container">
+						<div class="row clearfix">
+							<!--Image Column-->
+			
+							<div class="image-column col-lg-6">
+								<div class="image2">
+			
+									<img src="/assets/img/the_calculus_of_the_circle.jpg" alt="">
+								</div>
+							</div>
+							<!--Content Column-->
+							<div class="content-column col-lg-6">
+								<h3>The Calculus of The Circle<span class="orange-text">Thermodynamics</span></h3>
+								<h4>October Math Circle Competitions <span class="orange-text">(OMCC)</span></h4>
+								<div class="text"><p align="justify">Sparked by a common passion for mathematics, the first math circle in Egypt was initiated
+									 by group of 8 high-school students at STEM High School for Boys. The project aims at adavancing the study of mathematics, 
+									 and especially pure mathematics, in Egypt. In general education in Egypt, emphasis is placed on memorizing certaing techinques 
+									 to solve a certain specialized kind of problems. We aim to shed light on a different perspective of mathematics that is focused 
+									 more on proof-based solutions and general problem-solving techinques. This first edition of the book contains topics from Limits 
+									 to applications of integrals. Each topic is cultivated carefully, drawing connections between real analysis and problem-based 
+									 calculus, focusing more on the scratch work to get good intuitions for solving problems and problem-solving techniques that depend on creativity.</p></div>
+								<!--Countdown Timer-->
+								
+								<a href="https://drive.google.com/file/d/1pFD3a3hP2v7Xdc5BMwqxTj80sqLOg9tQ/view?usp=sharing"><button class="button-35"> Read</button></a>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end cart banner section -->
 	
 
 
