--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@
 							</div>
 							<!--Content Column-->
 							<div class="content-column col-lg-6">
-								<h3>The Calculus of The Circle<span class="orange-text">Thermodynamics</span></h3>
-								<h4>October Math Circle Competitions <span class="orange-text">(OMCC)</span></h4>
+								<h3>The Calculus of The <span class="orange-text">Circle</span></h3>
+								<h4>A TREATISE OF <span class="orange-text">DIFFERENTIAL</span> AND <span class="orange-text">INTEGRAL</span> CALCULUS</h4>
+								<h5>October Math Circle Competitions <span class="orange-text">(OMCC)</span></h5>
 								<div class="text"><p align="justify">Sparked by a common passion for mathematics, the first math circle in Egypt was initiated
 									 by group of 8 high-school students at STEM High School for Boys. The project aims at adavancing the study of mathematics, 
 									 and especially pure mathematics, in Egypt. In general education in Egypt, emphasis is placed on memorizing certaing techinques 
@@ -288,7 +289,7 @@
 									 calculus, focusing more on the scratch work to get good intuitions for solving problems and problem-solving techniques that depend on creativity.</p></div>
 								<!--Countdown Timer-->
 								
-								<a href="https://drive.google.com/file/d/1pFD3a3hP2v7Xdc5BMwqxTj80sqLOg9tQ/view?usp=sharing"><button class="button-35"> Read</button></a>
+								<a href="https://drive.google.com/file/d/1wanPWmmoHt2xoS5lA3XJp9nFRsorfSF5/view"><button class="button-35"> Read</button></a>
 							</div>
 						</div>
 					</div>
