--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
 							<div class="content-column col-lg-6">
 								<h3>The Calculus of The <span class="orange-text">Circle</span></h3>
 								<h4>A TREATISE OF <span class="orange-text">DIFFERENTIAL</span> AND <span class="orange-text">INTEGRAL</span> CALCULUS</h4>
-								<h5>October Math Circle Competitions <span class="orange-text">(OMCC)</span></h5>
+								<h5><i>October Math Circle Competitions <span class="orange-text">(OMCC)</span></i></h5>
 								<div class="text"><p align="justify">Sparked by a common passion for mathematics, the first math circle in Egypt was initiated
 									 by group of 8 high-school students at STEM High School for Boys. The project aims at adavancing the study of mathematics, 
-									 and especially pure mathematics, in Egypt. In general education in Egypt, emphasis is placed on memorizing certaing techinques 
+									 and especially pure mathematics, in Egypt. In general education in Egypt, emphasis is placed on memorizing certain techinques 
 									 to solve a certain specialized kind of problems. We aim to shed light on a different perspective of mathematics that is focused 
 									 more on proof-based solutions and general problem-solving techinques. This first edition of the book contains topics from Limits 
 									 to applications of integrals. Each topic is cultivated carefully, drawing connections between real analysis and problem-based 
