--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="I'm Ahmed Al Sunbati, but you can call me Moussa. I'm a mathematician, researcher, developer, philosopher, and writer.">
 
 	<!-- title -->
 	<title>Mathilosophy</title>
