--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 									</ul>
 								</li>
 								<li><a href="#my_projects">My Projects</a></li>
+								<li><a href="#publications" >Publications & Books</a></li>
 								<li>
 									<div class="header-icons">
 									
@@ -194,7 +195,7 @@
 	<!-- end product section -->
 	<!-- cart banner section -->
 	<section class="cart-banner pt-100 pb-100">
-    	<div class="container">
+    	<div class="container" id="publications">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
