--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="index.html">Home</a></li>
+								<li class="current-list-item"><a href="#Home">Home</a></li>
 								<li><a href="blog.html">Blog</a>
 									<ul class="sub-menu">
 										<li><a href="death-socrates.html">Death of Socrates</a></li>
@@ -94,7 +94,7 @@
 	<!-- hero area -->
 	<section class="site-title">
 	<div class="hero-area hero-bg">
-		<div class="container">
+		<div class="container" id="Home">
 			<div class="row">
 				<div class="col-lg-9 offset-lg-2 text-center">
 					<div class="hero-text">
@@ -148,7 +148,7 @@
 
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-1.jpg" alt="" height="220px"></a>
+							<a href=https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER><img src="assets/img/products/post-1.jpg" alt="" height="220px"></a>
 						</div>
 						<h3>Variable Stars Visualizer</h3>
 						<div class="content">
@@ -159,7 +159,7 @@
 
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-2.png" alt="" height="220px"></a>
+							<a href=https://github.com/AhmedMoussa-png/Neural-style-transfer-Project><img src="assets/img/products/post-2.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">Neural Style Transfer Project, Van Gogh</h3>
 						<p align="justify" style="padding:0 1em 0 1em">An art/deep learning project for generating starry-night-style pictures of <b>STEM High School For Boys</b>. The technique
@@ -168,7 +168,7 @@
 					</div>
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
+							<a href=https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">Elliptic Curves, A Comprehensive Library</h3>
 						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves(adding points, scalar multiples, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
@@ -178,7 +178,7 @@
 
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href=#><img src="assets/img/products/post-4.png" alt="" height="220px"></a>
+							<a href=https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course><img src="assets/img/products/post-4.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">VPython Simulations</h3>
 						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for physical systems: Electric field lines for different charge distributions; a simulation for space contraction as a result of very high speeds; a simulation for a solar system of two planets of crossing orbits and a star.</p>
@@ -225,8 +225,6 @@
 						It has been found that ECC provides equivalent level of security with much smaller key sizes and total
 						encryption and decryption time. Furthermore, an investigation of Isogeny-based Cryptography is carried
 						out to explore the viability of ECC in a post-quantum cryptography</p></div>
-                    <!--Countdown Timer-->
-                    
                 	<a href="https://drive.google.com/file/d/1BELX3Ohg3d1ajbjQrIHWzCWriY1O7LbD/view?usp=sharing"><button class="button-35"> Read </button></a>
                 </div>
             </div>
