--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<div class="row">
 							<div class="col-lg-8 offset-lg-2 text-center">
 								<div class="section-title">	
-									<h3><span class="orange-text">Publications</span> <span class="white-text">&</span> Books</h3>
+									<h3><span class="orange-text">Publication</span> <span class="white-text">&</span> Books</h3>
 								</div>
 							</div>
 						</div>
