--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<div class="row">
 							<div class="col-lg-8 offset-lg-2 text-center">
 								<div class="section-title">	
-									<h3><span class="orange-text">Publication</span> <span class="white-text">&</span> Books</h3>
+									<h3><span class="orange-text">Publications</span> <span class="white-text">&</span> Books</h3>
 								</div>
 							</div>
 						</div>
@@ -208,7 +208,7 @@
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard1-img" src="/assets/img/pioneer.PNG" />
 								<div class="projcard-textbox">
-									<div class="projcard-title"><span class="orange-text">Publications</span><h6><i>Under Supervision of professor <span class="orange-text">Nuh Aydin</span> of <span class="orange-text">Kenoyn college</span></i></h6></div>
+									<div class="projcard-title"><span class="orange-text">Publication</span><h6><i>Under Supervision of professor <span class="orange-text">Nuh Aydin</span> of <span class="orange-text">Kenoyn college</span></i></h6></div>
 									<div class="projcard-subtitle"><i>An Analysis of Elliptic Curves Cryptography and its Prospects in a Post-Quantum Future (Pioneer Academics Research)</i></div>
 									<div class="projcard-bar"></div>
 									<div class="projcard-description"><p align="justify">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
