--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 						<div class="projcard projcard1 projcard-red">
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard1-img" src="/assets/img/pioneer.PNG" />
-								<div class="projcard-textbox">
-									<div class="projcard-title"><span class="orange-text">Publication</span><h6><i>Under Supervision of professor <span class="orange-text">Nuh Aydin</span> of <span class="orange-text">Kenoyn college</span></i></h6></div>
+								<div class="projcard-textbox projcard-textbox1">
+									<div class="projcard-title"><span class="orange-text">Publication</span><h6 style="color:white;"><i>Under Supervision of professor <span class="orange-text">Nuh Aydin</span> of <span class="orange-text">Kenoyn college</span></i></h6></div>
 									<div class="projcard-subtitle"><i>An Analysis of Elliptic Curves Cryptography and its Prospects in a Post-Quantum Future (Pioneer Academics Research)</i></div>
 									<div class="projcard-bar"></div>
-									<div class="projcard-description"><p align="justify">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
+									<div class="projcard-description"><p align="justify" style="color:rgb(194, 194, 194);">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
 										of the problem of factoring large integers. In this study, we investigate another kind of cryptosystems based
 										on elliptic curves. This paper aims to understand the group structure of points on an elliptic curves.
 										Cryptosystems based on elliptic curves depend on the hardness of the elliptic curve version of the Discrete
@@ -243,11 +243,11 @@
 						<div class="projcard projcard3 projcard-red">
 							<div class="projcard-innerbox">
 								<img class="projcard-img" src="/assets/img/thermodynamics_handbook.jpg" />
-								<div class="projcard-textbox">
-									<div class="projcard-title"><span class="orange-text">Thermodynamics</span> Handbook</div>
+								<div class="projcard-textbox projcard-textbox3">
+									<div class="projcard-title"><span class="orange-text">Thermodynamics</span> <span style="color:white;">Handbook</span></div>
 									<div class="projcard-subtitle"><i>Physics Club</i></div>
 									<div class="projcard-bar"></div>
-									<div class="projcard-description"><p align="justify">This handbook was prepared as a part of the thermodynamics course at the official STEM October Physics
+									<div class="projcard-description"><p align="justify" style="color:rgb(194, 194, 194);">This handbook was prepared as a part of the thermodynamics course at the official STEM October Physics
 										Club. It's aimed at an intensive introductory course of thermodynamics and statistcal mechanics to prepare high school 
 										students for international competitions such as <b><i> Physics Brawl </b></i> and <b><i> IPhO </b></i>. The handbook touches
 										topics on the basics of temperature, heat transfer, and calorimetry. It further explores the thermal molecular properties of 
@@ -286,7 +286,7 @@
 						<div class="news-text-box">
 							<h3><a href="death-socrates.html">Death Of Socrates</a></h3>
 							<p class="excerpt" align="justify">Socrates, The father of western philosophy, surprisingly, never wrote a line in his life! All what we know about him is from the writings of his student Plato who also went on to become a great philosopher. </p>
-							<a href="death-socrates.html"><button class="read-more"> Read More </button></a>
+							<a href="death-socrates.html"><button class="read-more" style="margin-top: 60px;"> Read More </button></a>
 						</div>
 					</div>
 				</div>
@@ -298,7 +298,7 @@
 						<div class="news-text-box">
 							<h3><a href="descartes-first.html">Descrates' First Meditation</a></h3>
 							<p class="excerpt" align="justify">What is the truth? Is it the set of beliefs we are endowed with when we were born? How many times did we find that something we used to believe as children turned out to be some kind work of a devil trying to decieve us?</p>
-							<a href="descartes-first.html"><button class="read-more"> Read More </button> </a>
+							<a href="descartes-first.html"><button class="read-more" style="margin-top: 37px;"> Read More </button> </a>
 						</div>
 					</div>
 				</div>
