--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<div class="content">
 						<p align="justify" style="padding:0 1em 0 1em">The stars above are constantly changing, but usually these changes are too slow or too faint for the eye to see. The project is a web-application aiming at visualizing 100 stars from the General Catalogue For Variable Stars with interactive interface.</p>
 						</div>
-						<a href="https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER"><button class="button-35" id="open"> Explore </button></a>
+						<a href="https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER"><button class="cart-btn" style="margin-top: 32px;">Explore</button></a>
 					</div>
 
 					<div class="single-product-item">
@@ -165,15 +165,15 @@
 						<h3 class="project-title">Neural Style Transfer Project, Van Gogh</h3>
 						<p align="justify" style="padding:0 1em 0 1em">An art/deep learning project for generating starry-night-style pictures of <b>STEM High School For Boys</b>. The technique
 							depends on copying the style of a base image and composing the image desired in that style. </p>
-						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="button-35"> Explore </button></a>
+						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="cart-btn" style="margin-top: 22px;">Explore</button></a>
 					</div>
 					<div class="single-product-item">
 						<div class="product-image">
 							<a href=https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
 						</div>
 						<h3 class="project-title">Elliptic Curves, A Comprehensive Library</h3>
-						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves(adding points, scalar multiples, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
-						<a href="https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library"><button class="button-35"> Explore </button></a>
+						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves (adding points, scalar multiples, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
+						<a href="https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library"><button class="cart-btn">Explore</button></a>
 					</div>
 
 
@@ -183,7 +183,7 @@
 						</div>
 						<h3 class="project-title">VPython Simulations</h3>
 						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for physical systems: Electric field lines for different charge distributions; a simulation for space contraction as a result of very high speeds; a simulation for a solar system of two planets of crossing orbits and a star.</p>
-						<a href="https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course"><button class="button-35"> Explore </button></a>
+						<a href="https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course"><button class="cart-btn" style="margin-top: 30px;"> Explore </button></a>
 					</div>
 				
 
