--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				</div>
 			  </div>
 			  <div class="face face2">
-				<h2>01</h2>
+				<h3>GPA</h3>
 			  </div>
 			</div>
 			<div class="cbard">
@@ -153,7 +153,7 @@
 				  </div>
 				</div>
 				<div class="face face2">
-				  <h2>01</h2>
+				  <h3>ACT</h3>
 				</div>
 			  </div>
 			  <div class="cbard">
@@ -164,7 +164,7 @@
 				  </div>
 				</div>
 				<div class="face face2">
-				  <h2>01</h2>
+				  <h3 style="text-align: center;">TOEFL <br> <br>  <br>iBT</h3>
 				</div>
 			  </div>
 		  </div>
